<resources>
    <string name="app_name">ChattApp</string>

    <string name="register_title">REGISTER</string>
    <string name="login_title">LOGIN</string>
    <string name="username">Username</string>
    <string name="email">Mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>

    <string name="change_password_title">CHANGE PASSWORD</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
</resources>